--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <link rel="stylesheet" href="./assets/style/style.scss" />
-    <script type="module" src="./assets/javascript/main.js"></script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mon PorteFolio</title>
-  </head>
-  <body></body>
-</html>
+<%- include('partials/header', {title:'accueil'})%>
+<main>hellowolrd</main>
+<%- include('partials/footer')%>
