--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,63 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="<%= process.env.SITE_URL %>/assets/styles/style.css"
-    />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta type="keywords" content="PorteFolio, développement, informatique" />
-    <!-- Partage Réseaux -->
-    <meta property="og:url" content="<%= process.env.SITE_URL %>" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Mon PorteFolio" />
-    <meta
-      name="description"
-      content="Site de PorteFolio de projet de développement informatique"
-    />
 
-    <title>
-      <%= typeof title !== 'undefined' ? 'My Crypto | ' + title : 'My Crypto' %>
-    </title>
-    <script
-      type="module"
-      src="<%= process.env.SITE_URL %>/assets/js/main.js"
-    ></script>
-  </head>
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="<%= process.env.SITE_URL %>/assets/styles/style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta type="keywords" content="PorteFolio, développement, informatique" />
+  <!-- Partage Réseaux -->
+  <meta property="og:url" content="<%= process.env.SITE_URL %>" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Mon PorteFolio" />
+  <meta name="description" content="Site de PorteFolio de projet de développement informatique" />
 
-  <body>
-    <header>
-      <nav>
-        <div id="logo">
-          <a href="/"><i class="fas fa-house"></i></a>
-        </div>
-        <div id="nav">
-          <ul>
-            <li>
-              <i class="fas fa-address-card"></i><a href="/"> A propos</a>
-            </li>
-            <li>
-              <i class="fab fa-dev"></i><a href="/#compétence"> Compétences </a>
-            </li>
-            <li>
-              <i class="fab fa-github"></i><a href="/#projet"> Mes projets</a>
-            </li>
-            <li>
-              <i class="fas fa-phone"></i><a href="/#contact"> Me contacter</a>
-            </li>
-          </ul>
-          <i class="fas fa-moon" data-theme-toggler></i>
-        </div>
-        <i id="toggle-nav" class="fas fa-bars"></i>
-      </nav>
-    </header>
-  </body>
-</html>
+  <title>
+    <%= typeof title !== 'undefined' ? 'Mon PorteFolio | ' + title :
+      'Mon PorteFolio' %>
+  </title>
+  <script type="module" src="<%= process.env.SITE_URL %>/assets/images/nicolas-photo.jpg"></script>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <div id="logo">
+        <a href="/"><i class="fas fa-house"></i></a>
+      </div>
+      <div id="nav">
+        <ul>
+          <li>
+            <i class="fas fa-address-card"></i><a href="/"> A propos</a>
+          </li>
+          <li>
+            <i class="fab fa-dev"></i><a href="/#compétence"> Compétences </a>
+          </li>
+          <li>
+            <i class="fab fa-github"></i><a href="/#projet"> Mes projets</a>
+          </li>
+          <li>
+            <i class="fas fa-phone"></i><a href="/#contact"> Me contacter</a>
+          </li>
+        </ul>
+        <i class="fas fa-moon" data-theme-toggler></i>
+      </div>
+      <i id="toggle-nav" class="fas fa-bars"></i>
+    </nav>
+  </header>
