--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,6 @@
 @import "reset/reset";
+@import "variables/variables";
 @import "global/global";
 @import "header/header";
 @import "footer/footer";
+@import "accueil/accueil";
