--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="light">
 
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,7 +17,7 @@
     <%= typeof title !== 'undefined' ? 'Mon PorteFolio | ' + title :
       'Mon PorteFolio' %>
   </title>
-  <script type="module" src="<%= process.env.SITE_URL %>/assets/images/nicolas-photo.jpg"></script>
+  <script type="module" src="<%= process.env.SITE_URL %>/assets/javascript/main.js"></script>
 </head>
 
 <body>
@@ -29,10 +29,10 @@
       <div id="nav">
         <ul>
           <li>
-            <i class="fas fa-address-card"></i><a href="/"> A propos</a>
+            <i class="fas fa-address-card"></i><a href="/#a-propos"> A propos</a>
           </li>
           <li>
-            <i class="fab fa-dev"></i><a href="/#compétence"> Compétences </a>
+            <i class="fab fa-dev"></i><a href="/#competence"> Compétences </a>
           </li>
           <li>
             <i class="fab fa-github"></i><a href="/#projet"> Mes projets</a>
