--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -1,31 +1,48 @@
 @font-face {
   font-family: "Roboto Bold";
-  src: url("/assets/font/roboto-bold.eot");
-  src: url("/assets/font/roboto-bold.eot?#iefix") format("embedded-opentype"),
-    url("/assets/font/roboto-bold.woff2") format("woff2"),
-    url("/assets/font/roboto-bold.woff") format("woff"),
-    url("/assets/font/roboto-bold.ttf") format("truetype"),
-    url("/assets/font/roboto-bold.svg#Roboto Bold") format("svg");
+  src: url("/assets/font/roboto-bold/roboto-bold.eot");
+  src: url("/assets/font/roboto-bold/roboto-bold.eot?#iefix")
+      format("embedded-opentype"),
+    url("/assets/font/roboto-bold/roboto-bold.woff2") format("woff2"),
+    url("/assets/font/roboto-bold/roboto-bold.woff") format("woff"),
+    url("/assets/font/roboto-bold/roboto-bold.ttf") format("truetype"),
+    url("/assets/font/roboto-bold/roboto-bold.svg#Roboto Bold") format("svg");
 }
-
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/poppins.eot");
-  src: url("/assets/font/poppins.eot?#iefix") format("embedded-opentype"),
-    url("/assets/font/poppins.woff2") format("woff2"),
-    url("/assets/font/poppins.woff") format("woff"),
-    url("/assets/font/poppins.ttf") format("truetype"),
-    url("/assets/font/poppins.svg#Poppins") format("svg");
+  src: url("/assets/font/poppins/poppins.eot");
+  src: url("/assets/font/poppins/poppins.eot?#iefix")
+      format("embedded-opentype"),
+    url("/assets/font/poppins/poppins.woff2") format("woff2"),
+    url("/assets/font/poppins/poppins.woff") format("woff"),
+    url("/assets/font/poppins/poppins.ttf") format("truetype"),
+    url("/assets/font/poppins/poppins.svg#Poppins") format("svg");
 }
 
+html {
+  height: 100vh;
+}
+
+html,
+button {
+  font-family: "Poppins", sans-serif;
+}
+h1,
+h2,
+h3 {
+  font-family: "Roboto Bold", sans-serif;
+}
+h1 {
+  font-size: 28px;
+  padding: 8px 0;
+}
 * {
   scroll-behavior: smooth;
+  margin: 8px;
 }
-
 img {
   max-width: 100%;
 }
-
 a {
   position: relative;
   text-decoration: none;
@@ -44,13 +61,11 @@ a:not(#logo a, #reseaux a, #reseaux-mobile a):after {
 a:not(#logo a, #reseaux a, #reseaux-mobile a):hover {
   color: blue;
 }
-
 a:not(#logo a):not(#reseaux-mobile a):not(#reseaux a):hover:after,
 a.active:not(#logo a):not(#reseaux-mobile a):not(#reseaux a):after {
   transform: scaleX(1);
   bottom: -2px;
 }
-
 #up-arrow {
   position: fixed;
   right: 1rem;
@@ -69,20 +84,10 @@ a.active:not(#logo a):not(#reseaux-mobile a):not(#reseaux a):after {
     border-radius: inherit;
   }
 }
-
 main {
   // position: relative;
   margin: auto;
   max-width: 1024px;
-  & h1 {
-    backdrop-filter: blur(10px);
-    background: rgba(222, 216, 216, 0.5);
-    width: 80%;
-    max-width: 600px;
-    padding: 8px 0;
-    text-align: center;
-    border-radius: 8px 8px 0 0;
-  }
 }
 
 html[data-theme="light"] {
