--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,4 +3,6 @@
 @import "global/global";
 @import "header/header";
 @import "footer/footer";
+@import "reseaux/reseaux";
+@import "carrousel/carrousel";
 @import "accueil/accueil";
