--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
             <li><i class="fab fa-html5"></i>HTML5</li>
             <li><i class="fab fa-css3"></i>CSS3</li>
             <li><i class="fab fa-js-square"></i>JavaScript</li>
-            <li><i class="fas fa-t fas fa-s"></i>TypeScript</li>
+            <li><i class="fas fa-t "></i>TypeScript</li>
             <li><i class="fab fa-angular"></i>Angular</li>
             <li><i class=""></i>TailwindCSS</li>
             <li><i class=""></i>ExpressJS</li>
