--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,7 @@
             <i class="fab fa-dev"></i><a href="/#competence"> Compétences </a>
           </li>
           <li>
-            <i class="fab fa-github"></i><a href="/#projet"> Mes projets</a>
+            <i class="fab fa-github"></i><a href="/#projets"> Mes projets</a>
           </li>
           <li>
             <i class="fas fa-phone"></i><a href="/#contact"> Me contacter</a>
