--- a/styles/accueil/_accueil.scss
+++ b/styles/accueil/_accueil.scss
@@ -20,7 +20,11 @@ html {
         }
       }
       & #competence {
+        & .comp {
+          padding: 16px;
+        }
         & ul {
+          margin-bottom: 16px;
           display: flex;
           flex-direction: row;
           justify-content: space-evenly;
@@ -28,84 +32,10 @@ html {
             display: flex;
             flex-direction: column;
             align-items: center;
-          }
-        }
-      }
-      & #projets {
-        & #card-container {
-          display: flex;
-          flex-wrap: wrap;
-          gap: 16px; // Espace entre les cartes
-          justify-content: center;
-          align-items: center;
-          .card {
-            display: grid;
-            grid-template-areas:
-              "projet-name projet-name"
-              "projet-desc projet-desc"
-              "projet-img projet-link"; // Sépare l'image et les liens
-            grid-template-columns: 1fr 1fr; // Deux colonnes
-            grid-template-rows: auto auto auto; // Trois lignes
-            gap: 8px;
-            padding: 16px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            width: 100%;
-            background-color: #fff;
-
-            .text {
-              h3 {
-                grid-area: projet-name;
-                font-size: 1.5rem;
-                margin: 0;
-              }
-              p {
-                grid-area: projet-desc;
-                font-size: 1rem;
-                color: #666;
-              }
-            }
-
-            .media {
-              grid-area: projet-img; // Associe uniquement l'image à la zone projet-img
-              display: flex;
-              align-items: center;
-
-              img {
-                width: 100%;
-                max-width: 150px;
-                height: auto;
-                object-fit: cover;
-                border-radius: 4px;
-              }
-            }
-
-            .liens {
-              grid-area: projet-link; // Associe les liens à la zone projet-link
-              display: flex;
-              flex-direction: column;
-              gap: 4px;
-
-              a {
-                text-decoration: none;
-                color: #0077df;
-                font-size: 0.9rem;
-                transition: color 0.3s;
-
-                &:hover {
-                  color: #005bb5;
-                }
-              }
+            & i {
+              width: 24px;
             }
           }
-        }
-      }
-      & #contact {
-        .form-contact {
-          display: flex;
-          justify-content: center;
         }
       }
     }
@@ -136,55 +66,15 @@ html {
         }
         & #competence {
           & ul {
-            display: block;
+            display: grid;
             // flex-direction: row;
             // justify-content: space-evenly;
-            column-count: 2;
+            grid-template-columns: repeat(2, 1fr); // Deux colonnes
+            gap: 16px; // Espace entre les éléments
             & li {
-              display: flex;
-              flex-direction: column;
-              align-items: center;
+              margin-bottom: 12px;
             }
           }
-        }
-      }
-      #projets {
-        #card-container {
-          .card {
-            grid-template-areas:
-              "projet-name"
-              "projet-desc"
-              "projet-link";
-            grid-template-columns: 1fr;
-            text-align: center;
-
-            .media {
-              img {
-                display: none;
-              }
-              .liens {
-                justify-content: center;
-              }
-            }
-          }
-        }
-      }
-      .card {
-        grid-template-areas:
-          "projet-name"
-          "projet-desc"
-          "projet-link"; // Supprime la zone de l'image
-        grid-template-columns: 1fr; // Une seule colonne
-        text-align: center;
-
-        .media {
-          img {
-            display: none; // Cache l'image
-          }
-        }
-
-        .liens {
-          justify-content: center;
         }
       }
     }
