--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,8 +91,8 @@
             <div class="media"><img src="<%= process.env.SITE_URL %>/images/photo-card-portefolio.jpg" alt="photo du site dans l'état fini">
             </div>
             <div class="liens">
-              <a href="" class="lien-card">Liens vers le github du projet</a>
-              <a href="" class="lien-card">Liens vers le site du projet</a>
+              <a href="https://github.com" class="lien-card"> github du projet</a>
+              <a href="" class="lien-card"> site du projet</a>
             </div>
           </div>
           <div id="carrousel-control">
