--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,7 +11,18 @@
   </div>
 
 </div>
+<div id="reseaux-mobile">
 
+
+  <div>
+    <a href="" target="_blank"></a><i id="linkedin" class="fab fa-linkedin"></i></a>
+  </div>
+
+  <div>
+    <a href="" target="_blank"></a><i id="github" class="fab fa-github"></i></a>
+  </div>
+
+</div>
 <footer>
   &copy; <span class="year"></span> by Nicolas</a>
   <script>
