add link adress

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,11 +3,11 @@
 
 
   <div>
-    <a href="" target="_blank"></a><i id="linkedin" class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/Nicolas-Puchois" target="_blank"></a><i id="linkedin" class="fab fa-linkedin"></i></a>
   </div>
 
   <div>
-    <a href="" target="_blank"></a><i id="github" class="fab fa-github"></i></a>
+    <a href="www.linkedin.com/in/nicolas-puchois" target="_blank"></a><i id="github" class="fab fa-github"></i></a>
   </div>
 
 </div>
@@ -15,16 +15,16 @@
 
 
   <div>
-    <a href="" target="_blank"></a><i id="linkedin" class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/Nicolas-Puchois" target="_blank"></a><i id="linkedin" class="fab fa-linkedin"></i></a>
   </div>
 
   <div>
-    <a href="" target="_blank"></a><i id="github" class="fab fa-github"></i></a>
+    <a href="www.linkedin.com/in/nicolas-puchois" target="_blank"></a><i id="github" class="fab fa-github"></i></a>
   </div>
 
 </div>
 <footer>
-  &copy; <span class="year"></span> by Nicolas</a>
+  &copy; <span class="year"> </span> <span>by Nicolas</span>
   <script>
     const footerYear = document.querySelectorAll(".year");
     footerYear.forEach(copyright => {
