--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,11 +3,11 @@
 
 
   <div>
-    <a href="https://github.com/Nicolas-Puchois" target="_blank"></a><i id="linkedin" class="fab fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/nicolas-puchois" target="_blank"><i id="linkedin" class="fab fa-linkedin"></i></a>
   </div>
 
   <div>
-    <a href="www.linkedin.com/in/nicolas-puchois" target="_blank"></a><i id="github" class="fab fa-github"></i></a>
+    <a href="https://github.com/Nicolas-Puchois" target="_blank"><i id="github" class="fab fa-github"></i></a>
   </div>
 
 </div>
@@ -15,11 +15,11 @@
 
 
   <div>
-    <a href="https://github.com/Nicolas-Puchois" target="_blank"></a><i id="linkedin" class="fab fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/nicolas-puchois" target="_blank"><i id="linkedin" class="fab fa-linkedin"></i></a>
   </div>
 
   <div>
-    <a href="www.linkedin.com/in/nicolas-puchois" target="_blank"></a><i id="github" class="fab fa-github"></i></a>
+    <a href="https://github.com/Nicolas-Puchois" target="_blank"><i id="github" class="fab fa-github"></i></a>
   </div>
 
 </div>
