--- a/styles/carrousel/_carrousel.scss
+++ b/styles/carrousel/_carrousel.scss
@@ -118,16 +118,16 @@ html {
 }
 
 // INFO: partie tablette des boutons
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 600px) {
   html {
     main {
       #projets {
         #carousel {
           #card-container {
             .card {
-              flex: 0 0 80%; // Réduit la largeur de la carte à 80% de l'écran
-              max-width: 80%; // Limite la largeur maximale à 80%
-              margin: 0 auto; // Centre la carte horizontalement
+              flex: 0 0 100%; // Réduit la largeur de la carte à 80% de l'écran
+              max-width: 100%; // Limite la largeur maximale à 80%
+              margin: 0; // Centre la carte horizontalement
             }
           }
         }
@@ -137,7 +137,7 @@ html {
 }
 
 // INFO: partie tablette et mobile du carrousel
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 600px) {
   html {
     & main {
       #projets {
