fix img extention and remove duplicate code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
       </div>
       <section id="a-propos">
         <div id="img-pres">
-          <img src="<%= process.env.SITE_URL %>/images/nicolas-photo.jpg" alt="photo de nicolas souriant portant un polo bleu" />
+          <img src="<%= process.env.SITE_URL %>/images/nicolas-photo.webp" alt="photo de nicolas souriant portant un polo bleu" />
           <div id="content-pres">
             <p>
               Salut, moi c'est Nicolas. Bienvenue sur mon site.
@@ -66,13 +66,13 @@
           <h2>Mes projets</h2>
         </div>
         <div id="carousel">
+          <!-- INFO: container des cartes-->
           <div id="card-container"></div>
           <div id="carrousel-control">
             <button id="prev">&#10094;</button>
             <button id="next">&#10095;</button>
           </div>
         </div>
-        <!-- INFO: container des cartes-->
 
 
 
